# ai-dev-tools-zoomcamp-homework

./: .gitignore  README.md
01-overview/django-todo/: README.md  db.sqlite3  pyproject.toml
01-overview/django-todo/templates/: base.html  edit_todo.html  home.html
01-overview/django-todo/todo_project/: settings.py  urls.py
01-overview/django-todo/todos/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
01-overview/django-todo/todos/migrations/: 0001_initial.py
02-end-to-end/: AGENTS.md  Dockerfile  README.md  initial_prompt.md  package-lock.json  package.json  playwright.config.js
02-end-to-end/client/: package.json  vite.config.js
02-end-to-end/client/src/: App.jsx  index.css
02-end-to-end/client/src/components/: Editor.jsx
02-end-to-end/client/src/lib/: runCode.js
02-end-to-end/client/src/pages/: HomePage.jsx  SessionPage.jsx
02-end-to-end/server/: package.json
02-end-to-end/server/src/: index.js
02-end-to-end/tests/: collaboration.spec.js
03-mcp/: .gitignore  README.md  main.py  pyproject.toml  search.py  test.py  utils.py
03-mcp/minsearch/: __init__.py
03-mcp/scripts/: count_data.py  fastmcp_wheel_hash.py
03-mcp/tests/: test_search.py
