[project]
name = "django-todo"
version = "0.1.0"
description = "Django TODO app for AI Dev Tools Zoomcamp"
authors = [
    {name = "Sofia Malpique",email = "61147174+sofiamalpique@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "django (>=4.2,<5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
